@@ -225,7 +225,12 @@ defList = { 'hod' : (
              False, 120, False, True),
 
              ('idleness-limit', 'pos_int', 'Limit after which to deallocate the cluster',
-             False, 3600, False, True)),
+             False, 3600, False, True),
+
+             ('max-master-failures', 'pos_int', 
+              'Defines how many times a master can fail before' \
+              ' failing cluster allocation', False, 5, True, True)),
+
 
             'gridservice-mapred' : (
              ('external', 'bool', "Connect to an already running MapRed?",
